# EaseRx

./: .gitignore  Cargo.toml  README.md  README_CN.md  justfile  readme_cn.md  readme_en.md  release.md
.cargo/: config.toml
.github/workflows/: macos.yml  musl.yml  windows.yml
docs/: README.md  _navbar.md  index.html
docs/en/: 1.installation.md  10.async_execution.md  11.order_of_nested.md  12.exec_with_retain.md  13.exec_with_cancelable.md  14.exec_cancelable_with_retain.md  15.exec_with_timeout.md  16.exec_without_blocking.md  2.first_app.md  3.state_store.md  4.async_state.md  5.execution.md  6.single_state.md  7.multiple_states.md  8.collections.md  9.sync_execution.md  README.md  _coverpage.md  _sidebar.md  demo_cursive.md  demo_ratatui.md  simple_todo.md  usage.md
docs/zh-cn/: 1.installation.md  10.async_execution.md  11.order_of_nested.md  12.exec_with_retain.md  13.exec_with_cancelable.md  14.exec_cancelable_with_retain.md  15.exec_with_timeout.md  16.exec_without_blocking.md  2.first_app.md  3.state_store.md  4.async_state.md  5.execution.md  6.single_state.md  7.multiple_states.md  8.collections.md  9.sync_execution.md  README.md  _coverpage.md  _sidebar.md  demo_cursive.md  demo_ratatui.md  simple_todo.md
easerx/: Cargo.toml
easerx/src/: async_error.rs  async_state.rs  async_state_test.rs  execution_result.rs  execution_result_test.rs  lib.rs  macros.rs  mock.rs  state_store.rs  state_store_test.rs  stream_ext.rs
easerx/src/tests/: async_state_test.rs  execution_result_test.rs  mock_test.rs  mod.rs  state_store_test.rs
easerx/src/unit_tests/: async_error_test.rs  async_executes_test.rs  async_state_test.rs  execute_test.rs  execution_result_test.rs  mod.rs  state_store_test.rs  stream_ext_test.rs
easerx/tests/: test_async_executes.rs  test_execute_loop.rs  test_executes.rs  test_mock.rs
easerx/tests/common/: mod.rs
examples/basic1_state_store/: Cargo.toml
examples/basic1_state_store/src/: main.rs
examples/basic2_multiple_states/: Cargo.toml
examples/basic2_multiple_states/src/: main.rs
examples/basic3_collections/: Cargo.toml
examples/basic3_collections/src/: main.rs
examples/basic4_execute/: Cargo.toml
examples/basic4_execute/src/: main.rs
examples/basic5_async_execute/: Cargo.toml
examples/basic5_async_execute/src/: main.rs
examples/demo_cursive/: Cargo.toml  README.md
examples/demo_cursive/src/: main.rs
examples/demo_cursive/src/counter/: counter_model.rs  counter_state.rs  counter_view.rs  mod.rs
examples/demo_cursive/src/executor/: executor_model.rs  executor_state.rs  executor_view.rs  mod.rs
examples/demo_cursive/src/input/: input_handler.rs  input_state.rs  mod.rs
examples/demo_cursive/src/progress/: mod.rs  progress_model.rs  progress_state.rs  progress_view.rs
examples/demo_ratatui/: Cargo.toml
examples/demo_ratatui/src/: main.rs  main_runner.rs  main_view.rs
examples/demo_ratatui/src/app/: app_model.rs  app_view.rs  mod.rs
examples/demo_ratatui/src/counter/: counter_model.rs  counter_state.rs  counter_view.rs  mod.rs
examples/demo_ratatui/src/executor/: executor_model.rs  executor_state.rs  executor_view.rs  mod.rs
examples/demo_ratatui/src/input/: input_handler.rs  input_state.rs  mod.rs
examples/demo_ratatui/src/progress/: mod.rs  progress_model.rs  progress_state.rs  progress_view.rs
examples/demo_simple_todo/: Cargo.toml
examples/demo_simple_todo/src/: main.rs
examples/demo_simple_todo/src/todo/: mod.rs  todo_model.rs  todo_state.rs  todo_view.rs
examples/extended10_execution_without_blocking/: Cargo.toml
examples/extended10_execution_without_blocking/src/: main.rs
examples/extended1_order_of_nested/: Cargo.toml
examples/extended1_order_of_nested/src/: main.rs
examples/extended2_execute_with_retain/: Cargo.toml
examples/extended2_execute_with_retain/src/: main.rs
examples/extended3_execute_with_cancelable/: Cargo.toml
examples/extended3_execute_with_cancelable/src/: main.rs
examples/extended4_execute_cancelable_with_retain/: Cargo.toml
examples/extended4_execute_cancelable_with_retain/src/: main.rs
examples/extended5_execute_with_timeout/: Cargo.toml
examples/extended5_execute_with_timeout/src/: main.rs
examples/extended6_async_execute_with_retain/: Cargo.toml
examples/extended6_async_execute_with_retain/src/: main.rs  tracing_setup.rs
examples/extended7_async_execute_with_cancelable/: Cargo.toml
examples/extended7_async_execute_with_cancelable/src/: main.rs
examples/extended8_async_execute_cancelable_with_retain/: Cargo.toml
examples/extended8_async_execute_cancelable_with_retain/src/: main.rs
examples/extended9_async_execute_with_timeout/: Cargo.toml
examples/extended9_async_execute_with_timeout/src/: main.rs
