[package]
name = "easerx"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tokio-util = { workspace = true, features = ["default"] }
futures-signals = { workspace = true }
futures-core = { workspace = true }
pin-project = "1.1"
thiserror = "2.0"

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time","rt-multi-thread"] }

[lints]
workspace = true
