[package]
name = "easerx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tokio-util = { workspace = true, features = ["default"] }
futures-signals = { workspace = true }
futures-core = { workspace = true }
pin-project = "1.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }

[features]
serde = ["dep:serde", "dep:serde_json"]

[lints]
workspace = true
