[package]
name = "easerx"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["wmywork <mingyi.wan@gmail.com>", "The EaseRx Developers"]
description = "A reactive MVI (Model-View-Intent) framework for Rust."
documentation = "https://wmywork.github.io/EaseRx/"
repository = "https://github.com/wmywork/EaseRx"
homepage = "https://wmywork.github.io/EaseRx/"
keywords = ["mvi", "framework", "reactive", "ease", "rx"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tokio-util = { workspace = true, features = ["default"] }
futures-signals = { workspace = true }
futures-core = { workspace = true }
pin-project = "1.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }

[features]
serde = ["dep:serde", "dep:serde_json"]

[lints]
workspace = true
