[package]
name = "basic1_state_store"
version = "0.1.0"
edition = "2021"

[dependencies]
easerx = { path = "../../easerx" }
tokio = { workspace = true, features = ["full"] }
futures-signals = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
