[package]
name = "demo_ratatui"
version = "0.1.0"
edition = "2021"

[dependencies]
easerx = { path = "../../easerx" }
tokio = { workspace = true, features = ["full"] }
futures-signals = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
crossterm = "0.29.0"
ratatui = "0.29.0"
throbber-widgets-tui = "0.8.0"

[lints]
workspace = true
