[package]
name = "basic7_order_of_nested"
version = "0.1.0"
edition = "2024"

[dependencies]
easerx = { path = "../../easerx" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
