[package]
name = "extended1_order_of_nested"
version = "0.1.0"
edition = "2021"

[dependencies]
easerx = { path = "../../easerx" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
once_cell = "1.21.3"

[lints]
workspace = true
