[package]
name = "extended7_async_execute_with_cancelable"
version = "0.1.0"
edition = "2021"

[dependencies]
easerx = { path = "../../easerx" }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-signals = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
